# riscv-tools

./: .gitignore  Cargo.toml  flake.nix
assembler/: Cargo.toml  README.md
assembler/src/: assembler.rs  main.rs  parser.rs
assembler/src/instructions/: btype.rs  instruction.rs  itype.rs  jtype.rs  mod.rs  rtype.rs  stype.rs  translate.rs  types.rs  utype.rs
simulator/: Cargo.toml  README.md
